# Atmospheric-Sounding

./: .gitignore  README.md  friday.csv  makecsv.py  makekml.py  pyproject.toml  testfile.csv
FS/: FS.ino
GS/: GS.ino
